--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gsap": "^1.20.4",
     "history": "^4.7.2",
     "react": "^16.2.0",
+    "react-charming": "^1.1.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
