Changed the root structure. Prototype for local storage and data passing by props is finished.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "grid-styled": "^3.2.1",
     "gsap": "^1.20.4",
     "history": "^4.7.2",
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-charming": "^1.1.0",
     "react-dom": "^16.2.0",
-    "react-on-visible": "^1.4.0",
+    "react-on-visible": "^1.5.0",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
