New member module, cross site links, additional styling, assets

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.2.0",
     "react-charming": "^1.1.0",
     "react-dom": "^16.2.0",
+    "react-facebook": "^5.0.3",
     "react-on-visible": "^1.5.0",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
@@ -20,6 +21,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "react-slick": "^0.20.0",
+    "react-tabs": "^2.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sfcookies": "^1.0.2",
