--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-scripts": "1.1.1",
     "react-slick": "^0.20.0",
     "react-tabs": "^2.2.2",
+    "react-tooltip": "^3.5.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sfcookies": "^1.0.2",
-    "styled-components": "^3.1.6"
+    "styled-components": "^3.1.6",
+    "video-react": "^0.10.4"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
