--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.2.0",
     "react-facebook": "^5.0.3",
     "react-on-visible": "^1.5.0",
+    "react-places-autocomplete": "^7.1.1",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
